# auris

./: .gitignore  AURIS_BACKEND_MASTER_INDEX.md  BACKEND_IMPROVEMENT_PLAN.md  BACKEND_SESSION_PROGRESS.md  COMPLETE_DOCUMENTATION_PACKAGE.txt  COMPLETION_SUMMARY.txt  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_EXECUTION_PLAN.md  DOCS_MAP.txt  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.txt  FINAL_PRODUCTION_READY.md  FINAL_SESSION_COMPLETE.md  IMPROVEMENTS_AT_A_GLANCE.md  INTERACTIVE_DOCS_SUMMARY.md  PHASE_11_DEPLOYMENT_READY.md  PHASE_13_FRONTEND_INTEGRATION.md  PHASE_14_E2E_TESTING.md  PHASE_15_MONITORING_ALERTS.md  PHASE_17_PRODUCTION_VERIFICATION.md  PHASE_17_VERIFICATION_RESULTS.md  PHASE_2B_COMPLETE.md  PLANS_AND_PRICING.md  PRICING_AND_COSTS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_QUICK_START.md  QUICK_REFERENCE.md  README.md  README_PRODUCTION.md  SESSION_COMPLETE.md  SESSION_COMPLETE_FINAL_SUMMARY.md  SESSION_CONTINUATION_COMPLETE.md  STARTUP.md  WORKFLOW_DOCUMENTATION.md  api_documentation.md  coturn.conf  docker-compose.yml  pricing_and_deployment_guide.md
backend/: .env.example  Dockerfile  alembic.ini  requirements.txt
docs/: COMMERCIAL_ROADMAP_AND_LAUNCH_GUIDE.md  FINAL_COMPLETION_REPORT.md  FRONTEND_ARCHITECTURE_AND_API_MAPPING_PLAN.md  HANDOFF.md  README.md  (+9 more)
sdk/mcp-server/: README.md  main.py  pyproject.toml
sdk/python-sdk/: README.md  pyproject.toml  setup.py
sdk/python-sdk/auris/: __init__.py  agents.py  billing.py  calls.py  campaigns.py  client.py  cloned_voices.py  integrations.py  knowledge_base.py  phone_numbers.py  whatsapp.py
(+201 files in other folders)
