[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auris-python"
version = "1.0.0"
authors = [
  { name="Auris Voice AI Platform", email="support@auris.ai" },
]
description = "Official Python SDK for the Auris Enterprise Voice AI Platform"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
]
